syntax = "proto3";

package mqpb;

option go_package = "./mq_grpc_api";

service MqGrpcServices {
  rpc Put (PutRequest) returns (PutResponse) {
  }
  rpc Get (GetRequest) returns (GetResponse){
  }
  rpc BrowseFirst (BrowseFirstRequest) returns (BrowseResponse){
  }
  rpc BrowseNext (BrowseNextRequest) returns (BrowseResponse){
  }
}

message PutRequest {
  string queue   = 1;
  string message = 2;
}

message PutResponse {
  string status = 1;
  string error  = 2;
}

message GetRequest {
  string queue        = 1;
  int32  wait_ms      = 2;
  int32  max_msg_bytes= 3;
}

message GetResponse {
  string status  = 1;
  string message = 2;
  bool   empty   = 3;
  string error   = 4;
}

message BrowseFirstRequest {
  string queue         = 1;
  int32  wait_ms       = 2;
  int32  max_msg_bytes = 3;
}

message BrowseNextRequest {
  string browse_id     = 1;
  int32  wait_ms       = 2;
  int32  max_msg_bytes = 3;
}

message BrowseResponse {
  string status    = 1;
  string message   = 2;
  bool   empty     = 3;
  string browse_id = 4;
  string error     = 5;
}
